--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "clang-format -i src/*",
     "lint": "npm run format && eslint --fix xprofiler.js test/*.js",
     "test": "mocha -t 10000 -R spec test/*.test.js",
-    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000"
+    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000",
+    "ci": "npm run lint && npm run cov && codecov"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "clang-format": "^1.2.4",
+    "codecov": "^3.6.1",
     "eslint": "^6.6.0",
     "expect.js": "^0.3.1",
     "mm": "^2.5.0",
