--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "xprofiler.js",
   "scripts": {
-    "build": "node-gyp rebuild",
-    "format": "clang-format -i src/*",
+    "build": "npm run lint && node-gyp rebuild",
+    "format": "clang-format -i --glob=\"src/**/*[.h|.cc]\"",
     "lint": "npm run format && eslint --fix xprofiler.js test/*.js",
     "test": "mocha -t 10000 -R spec test/*.test.js",
     "test-single": "mocha -t 10000 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000",
-    "ci": "npm run lint && npm run cov && codecov"
+    "ci": "npm run lint && npm run cov && codecov",
+    "dep": "npm run lint && npm run build && npm run test"
   },
   "repository": {
     "type": "git",
