--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node-gyp rebuild",
     "format": "clang-format -i src/*",
-    "lint": "npm run format && eslint --fix xprofiler.js test/*.js",
+    "lint": "npm run format && eslint --fix xprofiler.js test/**/*.js",
     "test": "mocha -t 10000 -R spec test/*.test.js",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000",
     "ci": "npm run lint && npm run cov && codecov"
