--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "npm run lint && node-gyp rebuild",
     "format": "clang-format -i --glob=\"src/**/*[.h|.cc]\"",
-    "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\"",
+    "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js bin/*",
     "test": "mocha -t 10000 -R spec test/*.test.js",
     "test-single": "mocha -t 10000 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000",
@@ -22,6 +22,8 @@
     "url": "git+https://github.com/hyj1991/xprofiler.git"
   },
   "files": [
+    "bin",
+    "lib",
     "src",
     "binding.gyp",
     "xprofiler.js"
