--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bindings": "^1.5.0",
     "nan": "^2.14.0",
     "node-gyp": "^6.0.0",
+    "uuid": "^3.3.3",
     "yargs": "^14.2.0"
   },
   "devDependencies": {
