--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,11 @@ environment:
   matrix:
     # node.js
     - nodejs_version: "8"
+    - nodejs_version: "9"
     - nodejs_version: "10"
+    - nodejs_version: "11"
     - nodejs_version: "12"
+    - nodejs_version: "13"
 
 # Install scripts. (runs after repo cloning)
 install:
