--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xprofiler",
-  "version": "0.2.0",
+  "version": "1.0.0-beta",
   "description": "",
   "bin": {
     "xprofctl": "bin/xprofctl"
@@ -9,12 +9,13 @@
   "scripts": {
     "build": "npm run lint && node-gyp rebuild",
     "format": "clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
-    "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js bin/xprofctl",
+    "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js bin/xprofctl scripts/**/*.js",
     "test": "mocha -t 10000 -R spec test/*.test.js",
     "test-single": "mocha -t 10000 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 10000",
     "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 10000 -R spec",
-    "ci": "npm run lint && npm run cov && codecov",
+    "upload": "node scripts/upload.js",
+    "ci": "npm run lint && npm run cov && codecov && npm run upload",
     "dep": "npm run build && npm run cov"
   },
   "repository": {
@@ -46,11 +47,14 @@
     "codecov": "^3.6.1",
     "eslint": "^6.6.0",
     "expect.js": "^0.3.1",
+    "formstream": "^1.1.0",
     "mm": "^2.5.0",
     "mocha": "^6.2.2",
     "moment": "^2.24.0",
     "nyc": "^14.1.1",
-    "test-exclude": "^5.2.3"
+    "test-exclude": "^5.2.3",
+    "tunnel-agent": "^0.6.0",
+    "urllib": "^2.34.1"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
