--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xprofiler",
-  "version": "1.0.1-prepare",
+  "version": "1.0.2",
   "description": "",
   "bin": {
     "xprofctl": "bin/xprofctl"
