--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xprofiler",
   "version": "1.0.0-prepare",
-  "description": "",
+  "description": "node.js addon to output runtime logs",
   "bin": {
     "xprofctl": "bin/xprofctl"
   },
@@ -10,10 +10,10 @@
     "build": "npm run lint && node-gyp rebuild",
     "format": "clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
     "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js bin/xprofctl scripts/**/*.js",
-    "test": "mocha -t 15000 -R spec test/*.test.js",
-    "test-single": "mocha -t 15000 -R spec",
-    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 15000",
-    "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 15000 -R spec",
+    "test": "mocha -t 0 -R spec test/*.test.js",
+    "test-single": "mocha -t 0 -R spec",
+    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 0",
+    "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 0 -R spec",
     "upload": "node scripts/upload.js",
     "ci": "npm run lint && npm run cov && codecov && npm run upload",
     "dep": "npm run build && npm run cov"
