src: add index.d.ts for declaration

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "src",
     "binding.gyp",
     "xprofiler.js",
+    "index.d.ts",
     "xprofiler.json"
   ],
   "author": "yeekwanvong@gmail.com",
