--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "npm run lint && node-gyp rebuild",
     "format": "clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
     "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js patch/*.js bin/xprofctl scripts/**/*.js",
-    "test": "mocha -t 0 -R spec test/*.test.js",
+    "test": "mocha -t 0 -R spec test/*.test.js test/patch/*.test.js",
     "test-single": "mocha -t 0 -R spec",
-    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js  --timeout 0",
+    "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js test/patch/*.test.js --timeout 0",
     "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 0 -R spec",
     "upload": "node scripts/upload.js",
     "ci": "npm run lint && npm run cov && codecov && npm run upload",
