src: update for compatibility with node-v14.x
Reference: https://github.com/hyj1991/xprofiler/issues/57
PR-URL: https://github.com/hyj1991/xprofiler/pull/60
Reviewed-BY: hyj1991 <yeekwanvong@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xprofiler",
-  "version": "1.2.0",
+  "version": "1.2.1-prepare",
   "description": "node.js addon to output runtime logs",
   "bin": {
     "xprofctl": "bin/xprofctl"
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/hyj1991/xprofiler#readme",
   "dependencies": {
     "bindings": "^1.5.0",
-    "nan": "^2.14.0",
+    "nan": "^2.14.1",
     "node-gyp": "^6.0.0",
     "uuid": "^3.3.3",
     "yargs": "^14.2.0"
