--- a/package.json
+++ b/package.json
@@ -43,24 +43,24 @@
   "dependencies": {
     "bindings": "^1.5.0",
     "nan": "^2.14.1",
-    "node-gyp": "^6.0.0",
-    "uuid": "^3.3.3",
-    "yargs": "^14.2.0"
+    "node-gyp": "^6.1.0",
+    "uuid": "^8.1.0",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@istanbuljs/schema": "^0.1.2",
     "autod": "^3.1.0",
-    "clang-format": "^1.2.4",
-    "codecov": "^3.6.1",
-    "eslint": "^6.6.0",
+    "clang-format": "^1.4.0",
+    "codecov": "^3.7.0",
+    "eslint": "^6.8.0",
     "expect.js": "^0.3.1",
     "formstream": "^1.1.0",
-    "mm": "^2.5.0",
-    "mocha": "^6.2.2",
-    "moment": "^2.24.0",
-    "nyc": "^14.1.1",
-    "test-exclude": "^5.2.3",
+    "mm": "^3.2.0",
+    "mocha": "^7.2.0",
+    "moment": "^2.26.0",
+    "nyc": "^15.0.1",
     "tunnel-agent": "^0.6.0",
-    "urllib": "^2.34.1"
+    "urllib": "^2.35.0"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
