--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
     - nodejs_version: "12"
     - nodejs_version: "13"
     - nodejs_version: "14"
+    - nodejs_version: "15"
 
 # Install scripts. (runs after repo cloning)
 install:
