--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
   },
   "homepage": "https://github.com/X-Profiler/xprofiler#readme",
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.3",
     "moment": "^2.29.1",
     "nan": "^2.14.2",
-    "node-pre-gyp": "^0.16.0",
-    "uuid": "^8.3.1",
+    "uuid": "^8.3.2",
     "yargs": "^15.4.1"
   },
   "devDependencies": {
-    "@istanbuljs/schema": "^0.1.2",
+    "@istanbuljs/schema": "^0.1.3",
     "autod": "^3.1.1",
     "clang-format": "^1.4.0",
     "codecov": "^3.8.1",
@@ -72,7 +72,7 @@
     "mocha": "^7.2.0",
     "nyc": "^15.1.0",
     "tunnel-agent": "^0.6.0",
-    "urllib": "^2.36.1"
+    "urllib": "^2.37.0"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
