--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macOS-latest ]
-        node-version: [ 8, 9, 10, 11, 12, 13, 14, 15 ]
+        node-version: [ 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
     steps:
     - name: Checkout Git Source
       uses: actions/checkout@master
