--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ environment:
     - nodejs_version: "13"
     - nodejs_version: "14"
     - nodejs_version: "15"
+    - nodejs_version: "16"
 
 # Install scripts. (runs after repo cloning)
 install:
