--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macOS-latest ]
+        os: [ ubuntu-latest, macos-latest ]
         node-version: [ 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
     steps:
     - name: Checkout Git Source
