--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,12 @@ environment:
     - nodejs_version: "13"
     - nodejs_version: "14"
     - nodejs_version: "15"
+    - nodejs_version: "16"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version x64
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version) $env:PLATFORM
   # install modules
   - npm install
 
