--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,5 +35,13 @@ jobs:
     - name: Install Dependencies
       run: npm i -g npminstall && npminstall
 
-    - name: Continuous integration
+    - name: Continuous Integration
       run: npm run ci
+
+    - name: Package Binary
+      run: npm run pack
+
+    - name: Release
+        uses: softprops/action-gh-release@v1
+        files: release/**
+        if: startsWith(github.ref, 'refs/tags/')
