--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,6 +42,9 @@ jobs:
       run: npm run pack
 
     - name: Release
-        uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
         files: release/**
-        if: startsWith(github.ref, 'refs/tags/')
+        fail_on_unmatched_files: true
+        draft: true
