--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,6 +2,7 @@ name: Continuous integration
 on:
   push:
     branches: [ '**' ]
+    tags: v*.*.*
   pull_request:
     branches: [ '**' ]
   schedule:
@@ -13,7 +14,6 @@ jobs:
       fail-fast: false
       matrix:
         ci-type: [
-          {os: "windows-latest", arch: "x86"},
           {os: "windows-latest", arch: "x64"},
           {os: "macos-latest", arch: "x64"},
           {os: "ubuntu-latest", arch: "x64"},
@@ -36,12 +36,12 @@ jobs:
       run: npm i -g npminstall && npminstall
 
     - name: Continuous Integration
-      run: npm run ci
+      run: npm run ci || (sleep 60 && npm run ci) || (sleep 60 && npm run ci)
 
     - name: Package Binary
       run: npm run pack
 
-    - name: Release
+    - name: Draft Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
