--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xprofiler",
-  "version": "1.3.1-beta",
+  "version": "1.3.1",
   "description": "node.js addon to output runtime logs",
   "bin": {
     "xprofctl": "bin/xprofctl"
@@ -33,7 +33,7 @@
     "dep": "npm run build && npm run cov",
     "release": "node scripts/release.js",
     "autod": "autod",
-    "pack":"node scripts/clean.js && node-pre-gyp package && node-pre-gyp testpackage && npm run copy"
+    "pack": "node scripts/clean.js && node-pre-gyp package && node-pre-gyp testpackage && npm run copy"
   },
   "repository": {
     "type": "git",
