--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,11 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         ci-type: [
-          {os: "windows-latest", arch: "x64"},
-          {os: "macos-latest", arch: "x64"},
-          {os: "ubuntu-latest", arch: "x64"},
+          {os: "windows-latest", arch: "x64"}
         ]
-        node-version: [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
+        node-version: [ 12, 14, 16 ]
     steps:
     - name: Checkout Git Source
       uses: actions/checkout@master
