--- a/.eslintrc
+++ b/.eslintrc
@@ -43,13 +43,8 @@
   "env": {
     "es6": true,
     "node": true,
-    "browser": true
-  },
-  "globals": {
-    "describe": true,
-    "it": true,
-    "before": true,
-    "after": true
+    "browser": true,
+    "mocha": true
   },
   "parserOptions": {
     "ecmaVersion": 2018,
