--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "devDependencies": {
     "@istanbuljs/schema": "^0.1.3",
     "autod": "^3.1.2",
-    "clang-format": "^1.6.0",
+    "clang-format": "1.6.0",
     "codecov": "^3.8.3",
     "eslint": "^6.8.0",
     "expect.js": "^0.3.1",
