--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         ci-type: [
-          {os: "macos-latest", arch: "x64"}
+          {os: "windows-latest", arch: "x64"},
+          {os: "macos-latest", arch: "x64"},
+          {os: "ubuntu-latest", arch: "x64"},
         ]
         node-version: [ 8, 10, 12, 14, 16, 17 ]
     steps:
