--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
           {os: "macos-latest", arch: "x64"},
           {os: "ubuntu-latest", arch: "x64"},
         ]
-        node-version: [ 8, 10, 12, 14, 16, 17 ]
+        node-version: [ 12, 14, 16, 18 ]
     steps:
     - name: Checkout Git Source
       uses: actions/checkout@master
@@ -34,11 +34,9 @@ jobs:
 
     - name: Install Dependencies
       run: npm install
-      if: ${{ matrix.ci-type.os != 'windows-latest' || matrix.node-version != 8  }}
 
     - name: Continuous Integration
-      run: npm run ci || (sleep 60 && npm run ci) || (sleep 60 && npm run ci)
-      if: ${{ matrix.ci-type.os != 'windows-latest' || matrix.node-version != 8  }}
+      run: npm run ci
 
     # - name: Package Binary
     #   run: npm run pack
