--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pack-7u": "node scripts/7u.js",
     "pack-8u": "node scripts/8u.js",
     "copy": "node scripts/copy.js",
-    "build": "npm run lint && node-pre-gyp rebuild",
+    "build": "node-pre-gyp rebuild",
     "format": "clang-format --version && clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
     "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js patch/*.js bin/xprofctl scripts/**/*.js",
     "test": "mocha -t 0 -R spec test/*.test.js test/patch/*.test.js",
