--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pack-7u": "node scripts/7u.js",
     "pack-8u": "node scripts/8u.js",
     "copy": "node scripts/copy.js",
-    "build": "npm run lint && node-pre-gyp rebuild",
+    "build": "node-pre-gyp rebuild",
     "format": "clang-format --version && clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
     "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js patch/*.js bin/xprofctl scripts/**/*.js",
     "test": "mocha -t 0 -R spec test/*.test.js test/patch/*.test.js",
@@ -57,21 +57,21 @@
   "homepage": "https://github.com/X-Profiler/xprofiler#readme",
   "dependencies": {
     "@xprofiler/node-pre-gyp": "^1.0.9",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "nan": "^2.15.0",
     "uuid": "^8.3.2",
-    "yargs": "^15.4.1"
+    "yargs": "^17.4.1"
   },
   "devDependencies": {
     "@istanbuljs/schema": "^0.1.3",
     "autod": "^3.1.2",
-    "clang-format": "1.6.0",
+    "clang-format": "^1.8.0",
     "codecov": "^3.8.3",
-    "eslint": "^6.8.0",
+    "eslint": "^8.14.0",
     "expect.js": "^0.3.1",
     "formstream": "^1.1.1",
     "mm": "^3.2.0",
-    "mocha": "^7.2.0",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "tunnel-agent": "^0.6.0",
     "urllib": "^2.38.0"
