--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "test-single": "mocha -t 0 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js test/patch/*.test.js --timeout 0",
     "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 0 -R spec",
-    "upload": "node scripts/upload.js",
     "codecov": "codecov || echo 'warning: ignoring codecov failure'",
-    "ci": "npm run lint && npm run build && npm run cov && npm run codecov && npm run upload",
+    "ci": "npm run lint && npm run build && npm run cov && npm run codecov",
     "dep": "npm run build && npm run cov",
     "release": "node scripts/release.js",
     "autod": "autod",
@@ -73,8 +72,7 @@
     "mm": "^3.2.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "tunnel-agent": "^0.6.0",
-    "urllib": "^3.1.3"
+    "tunnel-agent": "^0.6.0"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
