--- a/package.json
+++ b/package.json
@@ -68,11 +68,9 @@
     "codecov": "^3.8.3",
     "eslint": "^8.23.1",
     "expect.js": "^0.3.1",
-    "formstream": "^1.1.1",
     "mm": "^3.2.0",
     "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
-    "tunnel-agent": "^0.6.0"
+    "nyc": "^15.1.0"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
