--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "test-single": "mocha -t 0 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js test/patch/*.test.js --timeout 0",
     "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 0 -R spec",
-    "upload": "node scripts/upload.js",
     "codecov": "codecov || echo 'warning: ignoring codecov failure'",
-    "ci": "npm run lint && npm run build && npm run cov && npm run codecov && npm run upload",
+    "ci": "npm run lint && npm run build && npm run cov && npm run codecov",
     "dep": "npm run build && npm run cov",
     "release": "node scripts/release.js",
     "autod": "autod",
@@ -69,12 +68,9 @@
     "codecov": "^3.8.3",
     "eslint": "^8.23.1",
     "expect.js": "^0.3.1",
-    "formstream": "^1.1.1",
     "mm": "^3.2.0",
     "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
-    "tunnel-agent": "^0.6.0",
-    "urllib": "^3.1.3"
+    "nyc": "^15.1.0"
   },
   "xctlIpcPath": {
     "unix": "xprofiler-ctl-uds-path.sock",
