--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "copy": "node scripts/copy.js",
     "build": "node-pre-gyp rebuild",
     "format": "clang-format --version && clang-format -i --glob=\"src/**/!(report_win)[.h|.cc]\"",
-    "lint": "npm run format && eslint --fix xprofiler.js \"test/**/*.js\" lib/*.js patch/*.js bin/xprofctl scripts/**/*.js",
+    "lint": "npm run format && eslint --fix  *.js \"test/**/*.js\" lib/*.js patch/*.js bin/xprofctl scripts/**/*.js",
     "test": "mocha -t 0 -R spec test/*.test.js test/patch/*.test.js",
     "test-single": "mocha -t 0 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js test/patch/*.test.js --timeout 0",
@@ -44,9 +44,9 @@
     "patch",
     "src",
     "binding.gyp",
-    "xprofiler.js",
+    "configuration.js",
     "index.d.ts",
-    "xprofiler.json"
+    "xprofiler.js"
   ],
   "author": "yeekwanvong@gmail.com",
   "license": "BSD-2-Clause",
