--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "homepage": "https://github.com/X-Profiler/xprofiler#readme",
   "dependencies": {
-    "@xprofiler/node-pre-gyp": "^1.0.10",
+    "@mapbox/node-pre-gyp": "^1.0.10",
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "uuid": "^9.0.0",
