test: get_config

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,11 @@ jobs:
         ]
         node-version: [ 12, 14, 16, 18, 20, 21 ]
     steps:
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
     - name: Checkout Git Source
       uses: actions/checkout@master
 
