--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
           {os: "macos-latest", arch: "x64"},
           {os: "ubuntu-latest", arch: "x64"},
         ]
-        node-version: [ 12, 14, 16, 18, 20, 21 ]
+        node-version: [ 12, 14, 16, 18, 20, 21, 22 ]
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
