--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,6 +41,11 @@ jobs:
     - name: Continuous Integration
       run: npm run ci
 
+    - name: Code Coverage
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+
     # - name: Package Binary
     #   run: npm run pack
 
