--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "xprofiler",
   "version": "2.6.1",
+  "engines": {
+    "node": ">=18.19.0"
+  },
   "description": "node.js addon to output runtime logs",
   "bin": {
     "xprofctl": "bin/xprofctl"
@@ -27,11 +30,9 @@
     "test-single": "mocha -t 0 -R spec",
     "cov": "nyc --reporter=html --reporter=text --reporter=lcov mocha -R spec test/*.test.js test/patch/*.test.js --timeout 60000",
     "cov-single": "nyc --reporter=html --reporter=text --reporter=lcov mocha --timeout 60000 -R spec",
-    "codecov": "codecov || echo 'warning: ignoring codecov failure'",
-    "ci": "npm run lint && npm run build && npm run cov && npm run codecov",
+    "ci": "npm run lint && npm run build && npm run cov",
     "dep": "npm run build && npm run cov",
     "release": "node scripts/release.js",
-    "autod": "autod",
     "pack": "node scripts/clean.js && node-pre-gyp package && node-pre-gyp testpackage && npm run copy"
   },
   "repository": {
@@ -63,10 +64,8 @@
   },
   "devDependencies": {
     "@istanbuljs/schema": "^0.1.3",
-    "autod": "^3.1.2",
     "clang-format": "^1.8.0",
-    "codecov": "^3.8.3",
-    "eslint": "^9.4.0",
+    "eslint": "^8.57.1",
     "expect.js": "^0.3.1",
     "mm": "^3.4.0",
     "mocha": "^10.4.0",
