feat(rust): 完成监控模块重构和编译错误修复
- 修复了所有监控模块的编译错误和类型不匹配问题
- 重构了 CPU、内存、GC、HTTP 和 libuv 监控模块
- 统一了 Monitor trait 实现和错误处理
- 修复了测试文件中的方法调用和参数错误
- 将编译警告从 14 个减少到 3 个
- 确保所有核心功能正常工作

--- a/rust/xprofiler-rs/Cargo.toml
+++ b/rust/xprofiler-rs/Cargo.toml
@@ -6,7 +6,7 @@ name = "xprofiler_rs"
 version = "0.1.0"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
 
 [dependencies]
 napi = "3.0.0"
@@ -30,6 +30,7 @@ parking_lot = "0.12"
 dashmap = "5.5"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+num_cpus = "1.16"
 
 [build-dependencies]
 napi-build = "2"
@@ -48,6 +49,7 @@ serial_test = "3.0"
 criterion = "0.5"
 proptest = "1.0"
 temp-dir = "0.1"
+tempfile = "3.0"
 
 [profile.release]
 lto = true
