--- a/rust/xprofiler-rs/Cargo.toml
+++ b/rust/xprofiler-rs/Cargo.toml
@@ -52,8 +52,10 @@ temp-dir = "0.1"
 tempfile = "3.0"
 
 [profile.release]
-lto = true
-strip = "symbols"
+lto = false
+codegen-units = 1
+opt-level = 3
+strip = false
 
 [[bench]]
 name = "benchmarks"
