fix: 修复基准测试链接器问题和函数调用错误
- 解决macOS上--strip-debug链接器选项不兼容问题
- 修复基准测试中的函数导入和调用错误
- 优化.cargo/config.toml配置以支持macOS平台
- 基准测试现在可以在开发模式下正常运行
- 性能测试结果：平台检测17ns，系统信息收集59ns，进程信息收集8μs

--- a/rust/xprofiler-rs/.cargo/config.toml
+++ b/rust/xprofiler-rs/.cargo/config.toml
@@ -1,2 +1,12 @@
-[target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "target-feature=+crt-static"]
+[build]
+target-dir = "target"
+
+[target.aarch64-apple-darwin]
+rustflags = [
+  "-C", "link-arg=-Wl,-undefined,dynamic_lookup"
+]
+
+[target.x86_64-apple-darwin]
+rustflags = [
+  "-C", "link-arg=-Wl,-undefined,dynamic_lookup"
+]
