feat: Complete major Rust refactoring milestones
- ✅ Created napi-rs project structure with comprehensive Cargo.toml
- ✅ Implemented core modules: config, environment, logger, utils
- ✅ Built monitoring modules: CPU, memory, GC with platform-specific optimizations
- ✅ Added SIMD optimizations (AVX2, SSE2, NEON) for performance-critical operations
- ✅ Implemented comprehensive error handling with custom MonitoringError types
- ✅ Created extensive benchmark suite for monitoring overhead analysis
- ✅ Added platform-specific implementations for Unix/Linux, macOS, Windows
- ✅ Established NAPI bindings for all core APIs
- ✅ Set up unit and integration testing framework

This represents the completion of Phase 1 (基础设施) and Phase 2 (监控核心)
of the XProfiler Rust refactoring plan, with significant progress on
Phase 4 (优化和完善) performance optimizations.

--- a/rust/xprofiler-rs/Cargo.toml
+++ b/rust/xprofiler-rs/Cargo.toml
@@ -59,6 +59,10 @@ debug = false
 name = "benchmarks"
 harness = false
 
+[[bench]]
+name = "monitoring_overhead"
+harness = false
+
 [features]
 default = []
 benchmarks = []
